--- a/Source/WPF/MyMoney/View Selectors/RentsControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/RentsControl.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Walkabout.Controls"
-             xmlns:localData="clr-namespace:Walkabout.Data" 
+             xmlns:localData="clr-namespace:Walkabout.Data"
+             Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
@@ -66,18 +66,11 @@
                 </StackPanel>
             </Grid>
         </HierarchicalDataTemplate>
-
-
-
-
-
-
-
     </UserControl.Resources>
 
 
 
-    <Grid Background="{DynamicResource SystemControlPageBackgroundChromeMediumLowBrush}">
+    <Grid>
 
         <TreeView Name="treeView1" ItemsSource="{Binding}" 
                   VirtualizingStackPanel.IsVirtualizing="True" 
