--- a/Source/WPF/MyMoney/View Selectors/CategoriesControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/CategoriesControl.xaml
@@ -7,6 +7,7 @@
              xmlns:local="clr-namespace:Walkabout.Views.Controls"
              xmlns:localData="clr-namespace:Walkabout.Data"  
              xmlns:help="clr-namespace:Walkabout.Help"
+             Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"
              help:HelpService.HelpKeyword="Categories"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
@@ -126,9 +127,7 @@
         <KeyBinding Command="local:CategoriesControl.CommandRenameCategory" Key="F2" />
     </UserControl.InputBindings>
 
-    <Grid Background="{DynamicResource SystemControlPageBackgroundChromeMediumLowBrush}">
-
-
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
