--- a/Source/WPF/MyMoney/View Selectors/SecuritiesControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/SecuritiesControl.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:c="clr-namespace:Walkabout.WpfConverters"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Walkabout.Views.Controls"
              xmlns:localData="clr-namespace:Walkabout.Data"   
              xmlns:help="clr-namespace:Walkabout.Help"
@@ -24,6 +23,7 @@
                  HorizontalContentAlignment="Stretch" 
                  HorizontalAlignment="Stretch" 
                  VerticalContentAlignment="Stretch"
+                 Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"
                  AllowDrop="True"
                  >
         
