--- a/Source/WPF/MyMoney/Views/FlowDocumentView.xaml
+++ b/Source/WPF/MyMoney/Views/FlowDocumentView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Walkabout.Views"
              xmlns:c="clr-namespace:Walkabout.Controls"
-             mc:Ignorable="d"  Background="White"
+             mc:Ignorable="d" 
              d:DesignHeight="400" d:DesignWidth="600">
     <Grid x:Name="Grid">
 
